# smartswitch-explorer

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci-smoke.yml  release.yml
docs/: calllog_format.md  encrypted_formats.md  localization.md
lib/smartswitch_core/: __init__.py  additional_detect.py  additional_export.py  category_grouping.py  direct_file.py  export.py  file_signatures.py  metadata.py  models.py  other_detect.py  other_export.py  scan.py  sizes.py
lib/smartswitch_core/applications/: __init__.py  decrypt_extract.py  detect.py
lib/smartswitch_core/crypto/: __init__.py  common.py  smartdecrypt.py
lib/smartswitch_core/messages/: __init__.py  decode.py  detect.py
packaging/linux/: smartswitch-explorer.desktop
packaging/linux/appimage/: AppRun  smartswitch-explorer-wrapper.sh
packaging/linux/flatpak/: io.github.sachk.SmartSwitchExplorer.desktop  io.github.sachk.SmartSwitchExplorer.metainfo.xml  io.github.sachk.SmartSwitchExplorer.yaml  smartswitch-explorer
scripts/: make_app_icon.sh  poc_decode_gmmessage.py
scripts/release/: build_appimage.sh  build_macos_installers.sh  build_pyinstaller.py  size_report.py  version.py  write_sha256.py
src/gui/: __init__.py  app.py  config.py  localization.py  main.py  version.py
src/gui/translations/: smartswitch_explorer_en.ts
src/gui/ui/: __init__.py  explorer_page.py  export_options_dialog.py  landing_page.py  main_window.py  progress_overlay.py  (+3 more)
src/webapp/: app.py  config.py  main.py
tests/: __init__.py  test_additional_content.py  test_apps.py  test_cli.py  test_config.py  test_direct_file_mapping.py  test_direct_import_plan.py  test_export_layout.py  test_grouping.py  test_localization.py  test_messages.py  test_other_data.py  test_progress_state.py  test_scanner.py  test_sizes.py  test_smartdecrypt.py
(+3 files in other folders)
