[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartswitch-explorer"
version = "0.1.0"
description = "Desktop Smart Switch backup explorer for applications and messages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pycryptodome>=3.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
smartswitch-explorer = "webapp.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src", "lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
